--- a/frontend/src/SideBar/FileExplorer/FileExplorer.module.scss
+++ b/frontend/src/SideBar/FileExplorer/FileExplorer.module.scss
@@ -6,34 +6,28 @@
 }
 
 .wrapper {
-  display: grid;
-  grid-template-columns: 240px 1fr;
-}
+  padding-top: 10px; 
+} 
 
 .sidebar {
-  width: 240px;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   overflow: auto;
-  border-right: 1px solid #eeeeee;
+  border-right: 1px solid #464d5b;
   .header {
     display: flex;
     align-items: center;
     height: 40px;
     padding-left: 8px;
-    border-bottom: 1px solid #eeeeee;
+    border-bottom: 1px solid #464d5b;
     .button {
       cursor: pointer;
       padding: 0 6px;
       height: 24px;
-      background: #eeeeee;
+      background: #464d5b;  
       border: none;
       border-radius: 4px;
       margin-right: 8px;
     }
   }
-}
-
-.section {
-  padding: 16px;
-  color: white;
 }
