--- a/frontend/src/SideBar/SideBar.module.scss
+++ b/frontend/src/SideBar/SideBar.module.scss
@@ -3,6 +3,7 @@
 .sideBar {
     background-color: $secondary-blue;
     width: 25%;
+    min-width: 300px;
     height: 100%;
 
     border-right: 1px solid $light-blue;
